--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Apache Setup</title>
 	</style>
 </head>
 <body lang="en-US" link="#000080" vlink="#800000" dir="ltr"><pre class="western">
-<p>Apache Web Server Setup Guide
+<p>Apache Web Server Setup Guide (WINDOWS ONLY DOSE NOT WORK FOR MAC CHROME OR AY OTHER TYPE OF APPLACATION ! )
 =============================
 
 Step 1: Download Apache HTTP Server
 -----------------------------------
-1. Open your web browser and go to the official Apache HTTP Server download page: https://httpd.apache.org/download.cgi
-2. Choose the appropriate version of Apache for your system (32-bit or 64-bit). As of this guide, version 2.4.61 is recommended.
+1. Open your web browser and go to the official Apache HTTP Server download page: <a href="https://www.apachelounge.com/download/">https://www.apachelounge.com/download/</a> (apache lounge)
+2. Choose the appropriate version of Apache for your system (Windows 32-bit or 64-bit). As of this guide, version 2.4.61 is recommended.
 3. Download the zip file or the installer.
 
 Step 2: Extract or Install Apache
